--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-clap = "4.5.51"
-dialoguer = "0.12.0"
+clap = { version = "4.5.51", features = ["derive"] }
 env_logger = "0.11.8"
 evdev = "0.13.2"
 input-event-codes = "6.2.0"
