--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ env_logger = "0.11.8"
 evdev = "0.13.2"
 input-event-codes = "6.2.0"
 log = "0.4.28"
+serde = { version = "1.0.228", features = ["derive"] }
+toml = "0.9.8"
